fixing button alignement

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -5,6 +5,7 @@
 
 .in_banner {
   background-color: #ED4639;
+  width: 250px;
   font-size: 20px;
   padding-left: 30px;
   padding-right: 30px;
