--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -11,7 +11,6 @@ h2 {
 }
 
 .btn-danger {
-  padding-top: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
